Tue Oct 18 2005  Loic Dachary  <loic@gnu.org>

 	* Release 1.0.12

	* upgrades/poker.server/1.0.11-1.0.12.xsl: Game start negotiations allows to triple the delays

	* pokernetwork/pokerclient.py (PokerClientFactory.__del__): dont delete games 
	  attribute if it does not exist.

	* pokerui/pokeranimation.py (PokerAnimationScheduler.__init__): cache chips values
	  for use by derived classes

	* database/1.0.11-1.0.12.sql: change money values according to units.

Mon Oct 17 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerserver.py (PokerService.spawnTourney): set the userdata when tournament
	  table is filled.

	* pokerclient2d/poker2d.py (Main.__init__): look for client.xml in current directory
	  first

	* pokerui/pokerrenderer.py (PokerRenderer.{buyIn,rebuy}): convert back the decimal amount
	  in cent

	* pokerui/pokerrenderer.py (PokerRenderer.requestBuyIn): converted to float so that
	  the user sees a decimal amount instead of a value in cents

	* pokernetwork/pokerclient.py: PacketPokerPlayerChips are no longer normalized by default
	  the PacketPokerClientPlayerChips is a new type that can hold chip / value maps

	* pokernetwork/pokerpackets.py (PacketPokerClientPlayerChips): kind of PacketPokerPlayerChips
	  that can hold chip / value map

	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection): POKER_PLAYER_CHIPS
	  is also rendered as POKER_CLIENT_PLAYER_CHIPS, that is with a chip / value map
	  instead of a mere integer.

	* pokerclient2d/pokerdisplay2d.py (chips2int): not needed anymore

	* pokerclient2d/pokerdisplay2d.py (PokerPlayer2D.updateChips): 
	  pokerclient2d/pokeranimation2d.py (PokerAnimationPlayer2D.pot2player): use
	  PokerChips.tostring to format the bet amount

	* pokerui/pokerrenderer.py (PokerRenderer.handleInPosition): kill
	  because never used

	* pokerui/pokeranimation.py (PokerAnimationPlayer.normalizeChips): remove 
	  function, use tolist method of pokerchips instead
